Created About Us with content and Navbar.js

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-"homepage":"http://zeinabfarag.github.io/prepr",
+"homepage": ".",
   "name": "client",
   "version": "0.1.0",
   "private": true,
