Fixed homepage link in package.json

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-"homepage": ".",
+"homepage": "https://zeinabfarag.github.io/prepr/",
   "name": "client",
   "version": "0.1.0",
   "private": true,
